syntax = "proto3";
package validator.types;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/validator/types";

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

import "validator/types/description.proto";

message Validator {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_stringer) = false;
  option (gogoproto.goproto_getters)  = false;

  // the account address of validator owner
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"]; 
  // description of the validator
  Description description = 2; 
  // the consensus public key of the tendermint validator
  google.protobuf.Any pubKey = 3 [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey"]; 
  // validator consensus power
  int32 power = 4; 
  // has the validator been removed from validator set
  bool jailed = 5; 
  // the reason of validator jailing
  string jailedReason = 6; 
  
}

