syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.validator;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/validator/types";



message ValidatorSigningInfo {
  string address = 1; 
  uint64 startHeight = 2; 
  uint64 indexOffset = 3; 
  uint64 missedBlocksCounter = 4; 
  
}

